{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 113,
  "lineage": "a0ca4cc8-69e6-672e-51d6-030bde378045",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "myelb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:560992162784:loadbalancer/terraform-asg",
            "availability_zones": [
              "eu-central-1a",
              "eu-central-1b",
              "eu-central-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "terraform-asg-85767411.eu-central-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terraform-asg",
            "idle_timeout": 60,
            "instances": [
              "i-03a54acf6e1fdf9c2",
              "i-0f26a18ec228fc36b"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "terraform-asg",
            "security_groups": [
              "sg-08731130437d9a317"
            ],
            "source_security_group": "560992162784/terraform-elb",
            "source_security_group_id": "sg-08731130437d9a317",
            "subnets": [
              "subnet-a447ade8",
              "subnet-bb58bfc7",
              "subnet-ea74dc80"
            ],
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.elb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b418580298265d5c",
            "arn": "arn:aws:ec2:eu-central-1:560992162784:instance/i-0e6f395233bdfd7dd",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e6f395233bdfd7dd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-0d1c07867b7395776",
            "private_dns": "ip-172-31-42-209.eu-central-1.compute.internal",
            "private_ip": "172.31.42.209",
            "public_dns": "ec2-3-125-115-61.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.125.115.61",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01bcf8fa0456ef718",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-instance"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-bb58bfc7",
            "tags": {
              "Name": "web-001"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d314b799745f0b35"
            ]
          },
          "dependencies": [
            "aws_security_group.instance"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b418580298265d5c",
            "arn": "arn:aws:ec2:eu-central-1:560992162784:instance/i-0fe35308d3342006b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fe35308d3342006b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-04db89f4ff6cb4412",
            "private_dns": "ip-172-31-37-57.eu-central-1.compute.internal",
            "private_ip": "172.31.37.57",
            "public_dns": "ec2-18-185-127-214.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.185.127.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03eff2d4b56efc46b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-instance"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-bb58bfc7",
            "tags": {
              "Name": "web-002"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d314b799745f0b35"
            ]
          },
          "dependencies": [
            "aws_security_group.instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:560992162784:security-group/sg-08731130437d9a317",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08731130437d9a317",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-elb",
            "name_prefix": null,
            "owner_id": "560992162784",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-ffdb1b95"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:560992162784:security-group/sg-0d314b799745f0b35",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d314b799745f0b35",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-instance",
            "name_prefix": null,
            "owner_id": "560992162784",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-ffdb1b95"
          }
        }
      ]
    }
  ]
}